crates/check_plugin_loader/src/snapshots/deserialization_error.snap
---
source: crates/check_plugin_loader/src/diagnostics.rs
expression: content
---
deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The key `version` is missing.
  
  > 1 │ {}
      │ ^^
