crates/check_plugin_loader/src/snapshots/evaluate_in_worker_threads.snap
---
source: crates/check_plugin_loader/src/analyzer_js_plugin.rs
expression: content
---
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Hello, world!
  

plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Hello, world!
