crates/check_plugin_loader/src/snapshots/load_plugin_with_wrong_rule_extension.snap
---
source: crates/check_plugin_loader/src/lib.rs
expression: content
---
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unsupported rule format for plugin rule rules/1.js
