crates/check_plugin_loader/src/snapshots/load_plugin_with_wrong_version.snap
---
source: crates/check_plugin_loader/src/lib.rs
expression: content
---
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Cannot load plugin manifest /my-plugin/check-manifest.jsonc
    
    Caused by:
      version must be 1
