crates/check_plugin_loader/src/snapshots/load_plugin_without_manifest.snap
---
source: crates/check_plugin_loader/src/lib.rs
expression: content
---
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to resolve the plugin manifest from /my-plugin/check-manifest.jsonc
